      * Removed requirement that categories to be set are available via `get_log_categories()`.
    * Added new option `step_size_downsampling_factor` to `Master` algorithm.
      This allows setting reduced input/output update rates on a per-model basis.
    * Enabled use of `result_downsampling_factor` to `Master` algorithm on a per-model basis. 

--- PyFMI-2.18.3 ---
    * Fixed a bug introduced in PyFMI 2.18.0 causing incorrect result storing for `boolean` and `enum` variables
      with `result_handling = "binary"` (default).

--- PyFMI-2.18.2 ---
    * Fixed an issue with `ResultDymolaBinary` result retrieval if `dynamic_diagnostics = True` and 
      there is only a single solution point.

--- PyFMI-2.18.1 ---
    * Fixed a caching issue in ResultDymolaBinary.get_variables_data().
    * Removed deprecation of `get_variable_data`, it is recommended to use `get_trajectory` anyways.

--- PyFMI-2.18.0 ---
    * Added new class `DynamicDiagnosticsUtils` in `pyfmi.common.diagnostics` providing
      various utility functions for computing additional diagnostics variables derived
      from those stored during simulation with `dynamic_diagnostics = True`.
      These computations were previously hard-coded into `ResultDymolaBinary`.
    * Simulations using `ExplicitEuler` with `dynamic_diagnostics = True` now also
      store event indicator values.
    * Fixed the issue that `@Diagnostics.nbr_steps` was off by one.
    * Improved handling of linking with dynamic FMIL library.
    * Added new abstract base class `pyfmi.common.io.ResultReader` as base for
      `ResultCSVTextual`, `ResultStorageMemory`, `ResultDymolaTextual` and `ResultDymolaBinary`.
    * `pyfmi.common.io.ResultReader` new features:
        * Get all variable names via `get_variable_names`.
        * Get multiple trajectories via `get_trajectories`.
    * Deprecations: 
        * `pyfmi.common.io.ResultStorage`, use `pyfmi.common.io.ResultReader` instead.